src/test/deca/context/invalid/langage_essentiel/deuxieme_passe/regle_2_4.deca
// Description:
//    regle 2.4 condition
//
// Resultats:
//    Ligne 8: Field 'a' already defined.
class A {
    int a;
    float a;
}